--- a/denha/framework/trace/debug.html
+++ b/denha/framework/trace/debug.html
@@ -1,7 +1,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <div id="tea_page_trace" style="position: fixed;bottom:0;right:0;font-size:14px;width:100%;z-index: 999999;color: #000;text-align:left;font-family:'微软雅黑';">
 <div id="tea_page_trace_tab" style="display: none;background:white;margin:0;height: 250px;">
-<div id="tea_page_trace_tab_tit" style="height:30px;padding: 6px 12px 0;border-bottom:1px solid #ececec;border-top:1px solid #ececec;font-size:16px">
+<div id="tea_page_trace_tab_tit" style="height:30px;padding: 0 12px 0;border-bottom:1px solid #ececec;border-top:1px solid #ececec;font-size:16px">
 	<?php foreach($trace as $key => $value){ ?>
     <span style="color:#000;padding-right:12px;height:30px;line-height: 30px;display:inline-block;margin-right:3px;cursor: pointer;font-weight:700"><?php echo $key ?></span>
     <?php } ?>
